<resources>
    <string name="app_name">ControlEmpleados</string>
    <string name="usuario">Usuario</string>
    <string name="texto_introducir_usuario">Introduce tu usuario</string>
    <string name="texto_introducir_password">Introduce tu contraseña</string>
    <string name="password">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="olvidado_password">He olvidad mi contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="texto_introduce_email">Introduce tu email</string>
    <string name="repite_password">Repite contraseña</string>
    <string name="dd_mm_aaaa">dd_mm_aaaa</string>
    <string name="peticion_sexo">Introduce sexo</string>
    <string name="sexo_f">F</string>
    <string name="sexo_m">M</string>
    <string name="error_mensage">Fallo al intentar cargar datos de internet...</string>
    <string name="pais">País</string>
    <string name="texto_pais_residencia">Introduce país de residencia</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="COUNTRIES_NAMES_URL" translatable="false">https://api.printful.com/countries</string>
    <string name="sin_conexion_internet">No hay conexión a internet</string>
    <string name="ruta_paises" translatable="false">https://api.printful.com/countries</string>
    <string name="pais_no_seleccionado">Sin seleccionar</string>
    <string name="rellena_campos">Rellena todos los campos</string>
    <string name="contrasenha_no_coincide">las contraseñas no coinciden</string>
    <string name="email_formato_incorrecto">El formato del email debe ser correcto</string>
    <string name="sexo_no_elegido">Debes elegir un sexo</string>
    <string name="acerca_de">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="anhadir_empelado">Añadir empleado</string>
    <string name="borrar_empelado">Borrar empleado</string>
    <string name="exito_log_in">Exito en el login</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="genero">Genero</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Dirección</string>
    <string name="departamento">Departamento</string>
    <string name="lengua">Lengua</string>
    <string name="fecha_contratación">Fecha contratación</string>
    <string name="fecha_nacimiento">Fecha nacimiento</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="aceptar">Aceptar</string>
    <string name="avatar">Avatar</string>
    <string name="user_pass_incorrectos">Usuario y/o contraseña incorrectos</string>
    <string name="id">Id</string>
    <string name="fecha_no_escogida">Debes escoger una fecha</string>
    <string name="genero_no_escogido">Debes elegir un genero</string>
    <string name="usuario_no_introducido">Usuario no introducido</string>
    <string name="recuerda_me">Recuerdarme</string>
    <string name="avatar_incorrecto">La url introducida no es correcta</string>
    <string name="sexo_female">Mujer</string>
    <string name="sexo_male">Hombre</string>
    <string name="lista_de_empleados">Lista de empleados</string>
    <string name="info_empleado">Información de empleado</string>
    <string name="has_eliminado_empleado">Has eliminado el empleado</string>
    <string name="opciones">Opciones</string>
    <string name="bd_nombre_usuarios">bbddUsuarios</string>
    <string name="bd_nombre_empleados">bbddEmpleados</string>

</resources>
