<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.controlempleados.activities.RegistrarseActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/negro"
            android:textSize="16dp"/>
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/editText_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/texto_introduce_email"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textColor="@color/negro"
            android:textSize="16dp"/>

        <EditText
            android:inputType="text"
            android:id="@+id/edittext_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/texto_introducir_usuario"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/negro"
            android:textSize="16dp"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/edittext_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/texto_introducir_password"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_repeat_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repite_password"
            android:textColor="@color/negro"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/edittext_repeat_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/texto_introducir_password"
            android:singleLine="true" />
    </LinearLayout>


    <TextView
        android:id="@+id/textview_fecha_nacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_nacimiento"
        android:textSize="16dp"
        android:textColor="@color/negro"/>


    <EditText
        android:id="@+id/edittext_recoge_fecha_nacimiento"
        android:hint="@string/dd_mm_aaaa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:maxLines="1"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textview_sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peticion_sexo"
        android:textSize="16dp"
        android:textColor="@color/negro"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp">


        <RadioGroup
            android:id="@+id/sexo_grupo"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:checkedButton="@id/btn_sexo_m">

            <RadioButton
                android:id="@+id/btn_sexo_f"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:checked="false"
                android:text="@string/sexo_f"
                android:textColor="@color/grisOscuro"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/btn_sexo_m"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:checked="false"
                android:text="@string/sexo_m"
                android:textColor="@color/grisOscuro"
                android:textSize="20dp" />
        </RadioGroup>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:text="País"
        android:textColor="@color/negro"
        android:textSize="16dp"></TextView>


    <Spinner
        android:id="@+id/paises_spinner"
        android:layout_width="120dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="aceptarCrearNuevaCuenta"
        android:text="Button" />


</LinearLayout>