<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetalleEmpleadoActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline5">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></ImageView>
    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|top"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline6">


        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow android:layout_margin="4dp">

                <TextView

                    android:layout_marginRight="20dp"
                    android:text="@string/id"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvID"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow android:layout_margin="4dp">

                <TextView

                    android:layout_marginRight="20dp"
                    android:text="@string/nombre"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFirstName"
                    android:text="prueba"
                    android:textSize="18sp" />
            </TableRow>


            <TableRow android:layout_margin="4dp">

                <TextView

                    android:layout_marginRight="20dp"
                    android:text="@string/apellido"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLastName"
                    android:text="prueba"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow android:layout_margin="4dp">

                <TextView

                    android:layout_marginRight="20dp"
                    android:text="@string/email"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:text="prueba"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow android:layout_margin="4dp">

                <TextView

                    android:layout_marginRight="20dp"
                    android:text="@string/genero"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvGender"
                    android:text="prueba"
                    android:textSize="18sp" />
            </TableRow>


            <TableRow android:layout_margin="4dp">

                <TextView

                    android:layout_marginRight="20dp"
                    android:text="@string/telefono"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:text="prueba"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow android:layout_margin="4dp">

                <TextView

                    android:layout_marginRight="20dp"
                    android:text="@string/direccion"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:text="prueba"
                    android:textSize="18sp" />
            </TableRow>


            <TableRow android:layout_margin="4dp">

                <TextView

                    android:layout_marginRight="20dp"
                    android:text="@string/departamento"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDepartment"
                    android:text="prueba"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow android:layout_margin="4dp">

                <TextView

                    android:layout_marginRight="20dp"
                    android:text="@string/lengua"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLanguage"
                    android:text="prueba"
                    android:textSize="18sp" />
            </TableRow>


            <TableRow android:layout_margin="4dp">

                <TextView

                    android:layout_marginRight="20dp"
                    android:text="@string/fecha_contratación"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvHiringDate"
                    android:text="prueba"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow android:layout_margin="4dp">

                <TextView

                    android:layout_marginRight="20dp"
                    android:text="@string/fecha_nacimiento"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBirthDate"
                    android:text="prueba"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>
    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />
</androidx.constraintlayout.widget.ConstraintLayout>