<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AnhadirEmpleadoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/formGroup">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    style="@style/formLabel"/>

                <EditText
                    android:id="@+id/edTxNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:inputType="text"
                    style="@style/formInput"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/formGroup">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apellido"
                    style="@style/formLabel"/>

                <EditText
                    android:id="@+id/edTxApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellido"
                    android:inputType="text"
                    style="@style/formInput"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/formGroup">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    style="@style/formLabel"/>

                <EditText
                    android:id="@+id/edTxEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    style="@style/formInput"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/formGroup">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genero"
                    style="@style/formLabel"/>

                <RadioGroup
                    android:id="@+id/sexo_grupo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="@style/formInput">

                    <RadioButton
                        android:id="@+id/btn_sexo_f"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="false"
                        android:text="@string/sexo_female"
                        android:textColor="@color/grisOscuro"/>

                    <RadioButton
                        android:id="@+id/btn_sexo_m"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="false"
                        android:text="@string/sexo_male"
                        android:textColor="@color/grisOscuro"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/formGroup">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/telefono"
                    style="@style/formLabel"/>

                <EditText
                    android:id="@+id/edTxTlfn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:inputType="phone"
                    style="@style/formInput"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/formGroup">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/direccion"
                    style="@style/formLabel"/>

                <EditText
                    android:id="@+id/edTxDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direccion"
                    android:inputType="text"
                    style="@style/formInput"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/formGroup">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avatar"
                    style="@style/formLabel"/>

                <EditText
                    android:id="@+id/edTxAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/avatar"
                    android:inputType="textUri"
                    style="@style/formInput"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/formGroup">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/departamento"
                    style="@style/formLabel"/>

                <EditText
                    android:id="@+id/edTxDepartamento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/departamento"
                    android:inputType="text"
                    style="@style/formInput"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/formGroup">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lengua"
                    style="@style/formLabel"/>

                <EditText
                    android:id="@+id/edTxLengua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lengua"
                    android:inputType="text"
                    style="@style/formInput"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/formGroup">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_contratación"
                    style="@style/formLabel"/>


                <EditText
                    android:id="@+id/edTxFechaContratacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/dd_mm_aaaa"
                    android:maxLines="1"
                    android:onClick="escogerFechaContratación"
                    style="@style/formInput"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/formGroup">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_nacimiento"
                    style="@style/formLabel"/>

                <EditText
                    android:id="@+id/edTxFechaNacimiento1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/dd_mm_aaaa"
                    android:maxLines="1"
                    android:onClick="escogerFechaNacimiento"
                    style="@style/formInput"/>
            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="introducirEmpleado"
                android:text="@string/aceptar"
                style="@style/formBtnSuccess"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>